move required txt and add link

--- a/app/assets/login.html
+++ b/app/assets/login.html
@@ -14,6 +14,7 @@
 					<input id="signupemail" type="email" name="email" placeholder="Email" required="">
 					<input id="signuppass" type="password" name="pswd" placeholder="Password" required="">
 					<button id="signupbtn">Sign up</button>
+					<a href="assets/wizexercise.txt">Wiz Exercise included file link</a>
 			</div>
 			<div class="login">
 					<label for="chk" aria-hidden="true">Login</label>
@@ -21,7 +22,7 @@
 					<input id="loginemail"type="email" name="email" placeholder="Email" required="">
 					<input id="loginpass"type="password" name="pswd" placeholder="Password" required="">
 					<button id="loginbtn">Login</button>
-			</div>
+			</div> 	
 	</div>
 	<script src="assets/js/login.js"></script>
 </body>
